FUSETOOLS-2564 - adding integration test and adding a couple of fixes
Signed-off-by: Brian Fitzpatrick <bfitzpat@redhat.com>